--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Age Calculator</h1>
-    <label for="ageInput">Enter your age:</label>
-    <input type="number" id="ageInput">
-    <button onclick="calculateAge()">Calculate</button>
-    <p id="result"></p>
-
-    <script src="script.js"></script>
+    <div class="app-main">
+        <h1>Age Calculator</h1>
+        <div class="inputform">
+            <label for="ageInput" class="enter">Enter your age:</label>
+            <input type="number" id="ageInput" class="textinput" placeholder="Type here...">
+        </div>
+        <button onclick="calculateAge()" class="submit">Calculate</button>
+        <p id="result" class="result">Result will be visible here...</p>
+        <p class="reset" id="resetbtn">Reset</p>
+        <script src="script.js"></script>
+    </div>
 </body>
 </html>
