--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button onclick="calculateAge()" class="submit">Calculate</button>
         <p id="result" class="result">Result will be visible here...</p>
         <p class="reset" id="resetbtn">Reset</p>
-        <script src="script.js"></script>
+        <script src="css/script.js"></script>
     </div>
 </body>
 </html>
